# oreilly_live_training_agents

./: .env.example  .gitignore  1.0-ls-agents-overview.ipynb  2.0-ls-general-framework-for-building-llm-agents.ipynb  5.0-ls-use-case1-UNDEFINED.ipynb  Makefile  README.md  TESTING.md  oreilly_live_training_agents-cheatsheet.html  resources.md  settings.json  test.txt  testing_mcp_servers.txt
docs/: install.md
notebooks/: 0.0-intro-llm-agents-from-scratch.ipynb  0.0-simple-react-agent-langgraph.ipynb  1.0-intro-agents.ipynb  1.0-intro-agents.md  1.0-intro-langchain-langgraph.ipynb  1.0-intro-langgraph.ipynb  1.0-intro-llm-agents-from-scratch.ipynb  1.0-ls-agents-overview.ipynb  1.1-intro-agents-openai-functions.ipynb  1.1-intro-langgraph-chatgpt-search.ipynb  1.1-intro-llm-patterns-and-langchain-components.ipynb  1.1-simple-react-agent-langgraph.ipynb  1.2-intro-langchain.ipynb  1.2-intro-langgraph-chatgpt-search.ipynb  1.2-intro-llm-agents-from-scratch.ipynb  1.3-intro-agents-with-langchain.ipynb  1.3-simple-react-agent-with-langchain.ipynb  1.4-intro-agents-with-langchain 2.ipynb  2.0-agents-with-langchain-langgraph.ipynb  2.0-building-llm-agents-with-langchain.ipynb  2.0-building-simple-LLM-agents-with-langchain.ipynb  2.0-intro-langgraph.ipynb  2.0-intro-llm-patterns-and-langchain-components.ipynb  2.0-langgraph-core-concepts.ipynb  2.1-building-agents-with-langchain-and-LCEL-interface.ipynb  2.1-rag-agent.ipynb  (+66 more)
notebooks/langgraph-app/: .env.example  README.md  langgraph.json  pyproject.toml  setup.md
notebooks/langgraph-app/src/my_agent/: __init__.py  graph.py
(+74 files in other folders)
