[project]
name = "my-langgraph-agent"
version = "0.1.0"
description = "A simple LangGraph agent tutorial application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.60",
    "langchain-openai>=0.2.16",
    "langchain-anthropic>=0.3.6",
    "langsmith>=0.2.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]
